[tool.poetry]
name = "gpt3-ghost"
version = "0.1.0"
description = ""
authors = ["lordvcs <diabolicfreak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.3.0"
Flask = "^1.1.2"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
